[metadata]
name = request
version = 1.0.1
project_urls = 
	Homepage = https://github.com/looking-for-a-job/request.py
	Bug Tracker = https://github.com/looking-for-a-job/request.py/issues
classifiers = file: .data/pypi.org/classifiers.txt
description = http REQUEST (GET+POST) dict
long_description = file: .data/pypi.org/README.md
long_description_content_type = text/markdown
keywords = request http

[options]
install_requires = 
	get
	post
	setuptools
packages = 
	request
